fix(mhv-secure-messaging): VADS alignment - folder edit buttons

--- a/src/applications/mhv-secure-messaging/sass/secure-messaging.scss
+++ b/src/applications/mhv-secure-messaging/sass/secure-messaging.scss
@@ -35,6 +35,23 @@ va-alert button {
   width: auto;
 }
 
+// Destructive button styling for Remove folder button
+// Uses ::part() to pierce shadow DOM and apply red outline style
+// Uses VADS color tokens matching va-button-icon button-type="delete"
+// The outline button uses box-shadow for border, not border-color
+.remove-folder-button::part(button) {
+  color: var(--vads-color-secondary-dark) !important;
+  box-shadow: inset 0 0 0 2px var(--vads-color-secondary-dark) !important;
+  background-color: transparent !important;
+}
+
+.remove-folder-button::part(button):hover,
+.remove-folder-button::part(button):active {
+  color: var(--vads-color-secondary-darkest) !important;
+  box-shadow: inset 0 0 0 2px var(--vads-color-secondary-darkest) !important;
+  background-color: var(--vads-color-secondary-lightest) !important;
+}
+
 va-modal va-radio {
   margin-left: 0px;
   margin-bottom: 24px;
